# MedAL-Agent

./: .gitignore  LICENSE  METHODS.md  README.md  pyproject.toml  references.bib  requirements.txt
medal_bench/: README.md  STATE.md  __init__.py
medal_bench/analysis/: __init__.py  derived.py  qc_report.py  stats_report.py
medal_bench/audit_v2/: __init__.py  pipeline.py
medal_bench/audit_v3/: __init__.py  analyze.py  build_report.py  diagnostics.py  eval_full.py  plots.py  preflight.py  replay_runner.py  run_one_replay.py
medal_bench/data/: __init__.py  base.py  remap.py
medal_bench/features/: __init__.py  sam.py
medal_bench/metrics/: __init__.py
medal_bench/models/: __init__.py  nnunet.py
medal_bench/policies/: __init__.py  _badge_grad.py  _helpers.py  _paal_ap.py  base.py  (+14 more)
results/: README.md  summary_19set.csv
scripts/: analyze_benchmark.py  analyze_skill_ceiling.py  budget_sensitivity.py
submit/: LAUNCH.md  btcv_determ_probe.sh  determ_check.sh  determ_confirm_p2p9.sh  determ_sweep.sh  diag_msd07.sh  finish_cell.sh  full_sup_worker.sh  gpu_cache_test.sh  launch_1k3k.sh  launch_expand_a40.sh  launch_expand_h100.sh  launch_expand_h100_heavy.sh  launch_expand_h100_more.sh  launch_expand_v100.sh  p6_forensic.py  p6_forensic.sh  prewarm_expand_h100.sh  prewarm_sam.sh  seed2000_gpufix_worker.sh  stage1_worker.sh  stage1p5_fullsup.sh  stage1p5_worker.sh  stage2_full_prewarm.sh  stage2_full_worker.sh  stage2_wave2_worker.sh  tf32_canary.py  tf32_canary.sh  v3_adaptive_worker.sh  v3_canary_worker.sh  v3_probe_worker.sh  v4_canary_worker.sh  verify_p6.sh
(+689 files in other folders)
